--- a/src/yardstick/public/forms.css
+++ b/src/yardstick/public/forms.css
@@ -28,9 +28,10 @@ button {
     font-family: 'Montserrat';
     text-transform: uppercase;
     font-weight: bold;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     margin-top: 20px;
     cursor: pointer;
+    
 }
 
 span {
