--- a/src/yardstick/resources/views/layouts/react.edge
+++ b/src/yardstick/resources/views/layouts/react.edge
@@ -1,4 +1,4 @@
-<div class="pagination">
+<div class="react">
   @loggedIn
   <a href="{{ route('CommentController.like', { id: comment.id }) }}"><img id="Like" style="width:1em; height:1em;" /></a>
   <a href="{{ route('CommentController.dislike', { id: comment.id }) }}"><img id="Dislike" style="width:1em; height:1em" /></a>
