--- a/src/yardstick/resources/views/devdoc.edge
+++ b/src/yardstick/resources/views/devdoc.edge
@@ -46,4 +46,5 @@
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
 <li> <a href="uml/423UseCaseDiagram.pdf" target="_blank">Use Case UML Diagram</a> </li>
+  <li> <a href=""</li>
 @endsection
