--- a/src/yardstick/resources/views/devdoc.edge
+++ b/src/yardstick/resources/views/devdoc.edge
@@ -1,6 +1,8 @@
 @layout('layouts.main')
 @section('content')
 <h1> <a href="/devdoc/gettingstarted"> Getting Started </a></h1>
+<h1> <a href="/apidocs"> API Documentation </a></h1>
+
 <h1> Documentation </h1>
 <h2> 1.0 Beta Release </h2>
 <p> Updated March 7th, 2021: </p>
@@ -46,5 +48,4 @@
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
 <li> <a href="uml/423UseCaseDiagram.pdf" target="_blank">Use Case UML Diagram</a> </li>
-  <li> <a href=""</li>
 @endsection
