added user tests and doc

--- a/src/yardstick/resources/views/devdoc.edge
+++ b/src/yardstick/resources/views/devdoc.edge
@@ -48,4 +48,10 @@
 <li> <a href="uml/423Database.pdf" target="_blank">Database UML Diagram</a> </li>
 <li> <a href="uml/423PackageDiagram.pdf" target="_blank">Package UML Diagram</a> </li>
 <li> <a href="uml/423UseCaseDiagram.pdf" target="_blank">Use Case UML Diagram</a> </li>
+<h2> 1.4 Release Candidate </h2>
+<p> Updated April 16nd, 2021: </p>
+<li> Added buttons and reactions to comments </li>
+<li> <a href="user_tests/UserTest1.pdf" target="_blank">User Testing (1)</a></li>
+<li> <a href="user_tests/UserTest2.pdf" target="_blank">User Testing (2)</a></li>
+<li> Updated selenium testing </li>
 @endsection
