--- a/src/yardstick/resources/views/layouts/main.edge
+++ b/src/yardstick/resources/views/layouts/main.edge
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Group 6 - Comment API </title>
-  <link rel="icon" href="pyramid.png">
+  <link rel="icon" href="/pyramid.png">
   {{ style('style') }}
 
   @!section('extracss')
@@ -15,13 +15,12 @@
 <body>
   <header>
     <a href="/home">
-      <img src="pyramid.png" id="logo">
+      <img src="/pyramid.png" id="logo">
     </a>
     <nav>
       <ul>
         <li><a href="/home">Home</a></li>
         <li><a href="/devdoc">Documentation</a></li>
-        <li><a href="/comments">Comment API</a></li>
         <li><a href="/videos">Videos</a></li>
         @loggedIn
 
