--- a/src/yardstick/resources/views/myvideos.edge
+++ b/src/yardstick/resources/views/myvideos.edge
@@ -46,13 +46,13 @@
 
   @each(video in videos)
 <div class="job-container2">
-<div class="blank"></div>
+<div class="video"></div>
 <div class="job-info">
   <h3>{{ video.title }} </h3>
   <p>{{ video.description }}</p>
   <ul>
-    <li><a href="{{ route('VideoController.delete', { id: video.id }) }}">Delete</a></li>
-    <li><a href="{{ route('VideoController.edit', { id: video.id }) }}">Edit</a></li>
+    <button onclick="location.href = '{{ route('VideoController.delete',{ id: video.id }) }}';" id="Delete">Delete</button>
+    <button onclick="location.href = '{{ route('VideoController.edit',{ id: video.id }) }}';" id="Edit">Edit</button>
   </ul>
 </div>
 </div>
