--- a/src/yardstick/resources/views/videos.edge
+++ b/src/yardstick/resources/views/videos.edge
@@ -11,6 +11,7 @@ SpecialProject.io Comment Api
 <h2>Top Videos </h2>
 @each(video in videos.data)
 <div class="job-container">
+<!-- This is a placeholder for a video image. -->
 <div class="video"></div>
     <div class="info">
 
