--- a/src/yardstick/resources/views/watchvideo.edge
+++ b/src/yardstick/resources/views/watchvideo.edge
@@ -52,6 +52,8 @@
 
   @each(comment in comments.data)
 <div class="job-container2">
+<!-- This is a placeholder for the user image. -->
+<!-- Dynamic requests could go here as well to specify a specific user image. -->
 <div class="user"></div>
 <div class="job-info">
 
