--- a/src/yardstick/resources/views/watchvideo.edge
+++ b/src/yardstick/resources/views/watchvideo.edge
@@ -12,7 +12,7 @@
 
 <h1> {{ video.title }}</h1>
 <div class="job-container">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/QR-tZqiKCrg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="{{video.url}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <p>-- {{ video.author }} --</p>
 
